crates/core-executor/src/tests/sql/commands/snapshots/unpivot/query_unpivot_with_subquery.snap
---
source: crates/core-executor/src/tests/sql/commands/unpivot.rs
description: "\"SELECT *\n  FROM (\n    SELECT empid, dept, jan, feb, mar\n    FROM monthly_sales\n    WHERE dept IN ('electronics', 'clothes')\n  )\n  UNPIVOT (sales FOR month IN (jan, feb, mar))\n  ORDER BY empid;\""
info: "Setup queries: CREATE OR REPLACE TABLE monthly_sales(\n  empid INT,\n  dept TEXT,\n  jan INT,\n  feb INT,\n  mar INT,\n  apr INT); INSERT INTO monthly_sales VALUES\n  (1, 'electronics', 100, 200, 300, 100),\n  (2, 'clothes', 100, 300, 150, 200),\n  (3, 'cars', 200, 400, 100, 50),\n  (4, 'appliances', 100, NULL, 100, 50);"
---
Ok(
    [
        "+-------+-------------+-------+-------+",
        "| empid | dept        | month | sales |",
        "+-------+-------------+-------+-------+",
        "| 1     | electronics | JAN   | 100   |",
        "| 1     | electronics | FEB   | 200   |",
        "| 1     | electronics | MAR   | 300   |",
        "| 2     | clothes     | JAN   | 100   |",
        "| 2     | clothes     | FEB   | 300   |",
        "| 2     | clothes     | MAR   | 150   |",
        "+-------+-------------+-------+-------+",
    ],
)
